@@ -1,6 +1,6 @@
 Package: EpiModel
-Version: 1.1.1.513
-Date: 2014-11-18
+Version: 1.1.1.517
+Date: 2014-11-19
 Title: Mathematical Modeling of Infectious Disease
 Description: Tools for simulating mathematical models of infectious disease.
     Epidemic model classes include deterministic compartmental models,
